fix to avoid horizontal scroll bar in datatables

--- a/portal/src/main/webapp/css/data_table.css
+++ b/portal/src/main/webapp/css/data_table.css
@@ -216,5 +216,13 @@ table.dataTable th:active {
 .dataTables_scrollBody {
 	*margin-top: -1px;
 	-webkit-overflow-scrolling: touch;
+	overflow-y: scroll;
+	overflow-y: hidden;
 }
 
+.dataTables_scrollBody {
+	*margin-top: -1px;
+	-webkit-overflow-scrolling: touch;
+	overflow-y: scroll!important;
+	overflow-x: hidden!important;
+}
